--- a/XeatsV4/app/src/main/res/layout/activity_delivery_login_phone.xml
+++ b/XeatsV4/app/src/main/res/layout/activity_delivery_login_phone.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/deliverybg"
-    tools:context=".deliveryLoginPhone">
+    tools:context=".Delivery.deliveryLoginPhone">
 
     <LinearLayout
         android:layout_width="280dp"
