--- a/XeatsV4/app/src/main/res/layout/activity_seller_login_phone.xml
+++ b/XeatsV4/app/src/main/res/layout/activity_seller_login_phone.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/sellerbg"
-    tools:context=".sellerLoginPhone">
+    tools:context=".Seller.sellerLoginPhone">
 
     <LinearLayout
         android:layout_width="280dp"
