--- a/XeatsV4/app/src/main/res/layout/activity_seller_registration.xml
+++ b/XeatsV4/app/src/main/res/layout/activity_seller_registration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/sellerbg"
-    tools:context=".sellerRegistration">
+    tools:context=".Seller.sellerRegistration">
 
     <ScrollView
         android:layout_width="280dp"
