--- a/XeatsV4/app/src/main/res/layout/activity_customer_registration.xml
+++ b/XeatsV4/app/src/main/res/layout/activity_customer_registration.xml
@@ -10,7 +10,8 @@
     <ScrollView
         android:layout_width="280dp"
         android:layout_height="430dp"
-        android:layout_marginRight="60dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
         android:background="@drawable/bg"
         android:orientation="vertical"
         android:padding="15dp"
