--- a/XeatsV4/app/src/main/res/layout/activity_delivery_registration.xml
+++ b/XeatsV4/app/src/main/res/layout/activity_delivery_registration.xml
@@ -10,7 +10,8 @@
     <ScrollView
         android:layout_width="280dp"
         android:layout_height="430dp"
-        android:layout_marginRight="60dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
         android:background="@drawable/bg"
         android:orientation="vertical"
         android:padding="15dp"
@@ -23,7 +24,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg"
+            android:background="@drawable/background"
             android:orientation="vertical">
 
             <TextView
@@ -37,7 +38,7 @@
                 android:text="Delivery Registration" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/FirstNamedR"
+                android:id="@+id/deliveryRegFirstName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -51,7 +52,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/LastNamedR"
+                android:id="@+id/deliveryRegLastName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
@@ -64,7 +65,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/EmaildR"
+                android:id="@+id/deliveryRegEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
@@ -77,7 +78,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/PassworddR"
+                android:id="@+id/deliveryRegPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -91,7 +92,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/confirmPassworddR"
+                android:id="@+id/deliveryRegConfirmPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -111,7 +112,7 @@
                 android:orientation="horizontal">
 
                 <com.hbb20.CountryCodePicker
-                    android:id="@+id/CountryCodedR"
+                    android:id="@+id/deliveryRegCcp"
                     android:layout_width="130dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="12dp"
@@ -121,7 +122,7 @@
                 </com.hbb20.CountryCodePicker>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/MobileNumdR"
+                    android:id="@+id/deliveryRegMobileNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -134,7 +135,7 @@
             </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/HouseNumdR"
+                android:id="@+id/deliveryRegLocalAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
@@ -146,7 +147,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/SubdcR"
+                android:id="@+id/deliveryRegSubd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
@@ -159,7 +160,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Spinner
-                android:id="@+id/ProvincedR"
+                android:id="@+id/deliveryRegProvince"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -168,7 +169,7 @@
                 android:textAlignment="viewStart" />
 
             <Spinner
-                android:id="@+id/CitydR"
+                android:id="@+id/deliveryRegCity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -177,7 +178,7 @@
                 android:textAlignment="viewStart" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/AreaCodedR"
+                android:id="@+id/deliveryRegZipCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
@@ -190,7 +191,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
-                android:id="@+id/sellerSignupBtndR"
+                android:id="@+id/deliveryRegSignUpButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
@@ -255,7 +256,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/signupEmailSellerBtndR"
+                    android:id="@+id/deliveryRegSignUpWithEmail"
                     android:layout_width="95dp"
                     android:layout_height="40dp"
                     android:layout_marginLeft="15dp"
@@ -267,7 +268,7 @@
                     android:textColor="@color/white" />
 
                 <Button
-                    android:id="@+id/signupPhoneSellerBtndR"
+                    android:id="@+id/deliveryRegSignUpWithPhone"
                     android:layout_width="97dp"
                     android:layout_height="40dp"
                     android:layout_marginLeft="30dp"
