--- a/XeatsV4/app/src/main/res/values/styles.xml
+++ b/XeatsV4/app/src/main/res/values/styles.xml
@@ -1,14 +1,20 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppTheme" parent="@style/Theme.AppCompat">
         <item name="colorPrimary">@color/mySelectedColor</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/darkgray</item>
     </style>
 
-    <style name="AppThemeNoActionbar" parent="AppTheme">
-        <item name="windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
-    </style>
+    <!-- <style name="AppThemeNoActionbar" parent="AppTheme">
+         <item name="windowNoTitle">true</item>
+         <item name="windowActionBar">false</item>
+     </style>
 
-</resources>
+     <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+         <item name="android:background">@color/colorPrimary</item>
+         <item name="android:textColorPrimary">@android:color/holo_blue_light</item>
+         <item name="actionMenuTextColor">@android:color/holo_green_light</item>
+     </style> -->
+
+ </resources>
