--- a/XeatsV4/app/src/main/res/layout/activity_delivery_dashboard.xml
+++ b/XeatsV4/app/src/main/res/layout/activity_delivery_dashboard.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Delivery.deliveryDashboard">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/delivery_fragment_container"
+        android:layout_above = "@+id/delivery_bottom_navigation"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/delivery_bottom_navigation"
+        android:backgroundTint="@color/white"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/menu_item_color"
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/delivery_bottom_nav"
+        android:layout_alignParentBottom = "true">
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+
+</RelativeLayout>
