--- a/XeatsV4/app/src/main/res/layout/activity_seller_dashboard.xml
+++ b/XeatsV4/app/src/main/res/layout/activity_seller_dashboard.xml
@@ -16,11 +16,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/seller_bottom_navigation"
-        android:layout_alignParentBottom="true"
-        android:background="@color/white"
         android:backgroundTint="@color/white"
+        app:itemIconTint="@color/white"
         app:itemTextColor="@color/menu_item_color"
-        app:itemIconTint="@color/menu_item_color"
-        app:menu="@menu/seller_bottom_nav"/>
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/seller_bottom_nav"
+        android:layout_alignParentBottom = "true">
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </RelativeLayout>
