--- a/XeatsV4/app/src/main/res/values/colors.xml
+++ b/XeatsV4/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="blueish">#17A2C0</color>
     <color name="black">#000000</color>
     <color name="blacklogo">#535050</color>
-    <color name="defaultcolor">#000000</color>
+    <color name="defaultcolor">#FFFFFF</color>
     <color name="gray">#7E000000</color>
     <color name="darkgray">#B2000000</color>
     <color name="lightgray">#1D000000</color>
